--- a/about/index.html
+++ b/about/index.html
@@ -45,8 +45,7 @@
     </div>
   </div>
 </header>
-    <div class="banner">
-</div>
+    <div class="banner"></div>
     <section id="main" class="outer"><article id="page-undefined" class="article article-type-page" itemscope itemprop="blogPost">
   <div class="article-inner">
     
