--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     </div>
   </div>
 </header>
-    <div class="banner">
-</div>
+    <div class="banner"></div>
     <section id="main" class="outer">
       <article id="post-hello-world" class="article article-type-post" itemscope itemprop="blogPost">
   <div class="article-inner">
